tests/NormalTests/paczka1/fuzzy1/14506925.err
Error in line 1: SOshSm2 A444 47,7
Error in line 5: SOshSm2 A478 82,0
Error in line 10: CZJ A444 11,0
Error in line 3: A478 A325 33,2
Error in line 17: A478 A478 95,3
Error in line 27: SOshSm2 S595 140,46
Error in line 12: CZJ A478 3,0
Error in line 30: 3HB9Kn35Y S595 8,6
Error in line 28: CZJ A444 69,4
Error in line 29: snhMpg8Arq1 A478 5,4
Error in line 37: 3HB9Kn35Y A444 44,8
